--- a/07_web/index.html
+++ b/07_web/index.html
@@ -4,105 +4,197 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Predicao de Risco de Hipertensao</title>
-  <link rel="stylesheet" href="/static/styles.min.css" />
+  <link rel="stylesheet" href="/static/styles.css" />
 </head>
 <body>
   <div class="wrap">
     <header>
       <div>
         <h1 class="title">Predicao de Risco de Hipertensao</h1>
-        <p class="subtitle">Inferencia clinica com modelo selecionado automaticamente</p>
+        <p class="subtitle">Inferencia clinica com modelo de Machine Learning</p>
       </div>
       <div class="badge">API /predict</div>
     </header>
 
-    <section class="card">
-      <h2>Entrada do paciente</h2>
+    <section class="card form-card">
+      <h2>Dados do Paciente</h2>
       <form id="predict-form">
+
+        <!-- Dados Demograficos -->
+        <div class="section-title">Dados Demograficos</div>
         <div class="grid">
-          <div>
-            <label for="sexo">Sexo (0=feminino, 1=masculino)</label>
-            <select id="sexo" name="sexo">
-              <option value="0">0 - Feminino</option>
-              <option value="1">1 - Masculino</option>
-            </select>
+          <div class="field">
+            <label for="sexo">Sexo</label>
+            <div class="toggle-group">
+              <input type="radio" id="sexo-f" name="sexo" value="0" checked>
+              <label for="sexo-f" class="toggle-btn">Feminino</label>
+              <input type="radio" id="sexo-m" name="sexo" value="1">
+              <label for="sexo-m" class="toggle-btn">Masculino</label>
+            </div>
           </div>
-          <div>
-            <label for="idade">Idade</label>
-            <input id="idade" name="idade" type="number" step="1" min="0" required />
+          <div class="field">
+            <label for="idade">Idade: <span class="slider-value" id="idade-value">50</span> anos</label>
+            <input type="range" id="idade" name="idade" min="20" max="90" value="50" class="slider">
+            <div class="slider-labels"><span>20</span><span>90</span></div>
           </div>
-          <div>
+        </div>
+
+        <!-- Habitos -->
+        <div class="section-title">Habitos</div>
+        <div class="grid">
+          <div class="field">
             <label for="fumante_atualmente">Fumante atualmente</label>
-            <select id="fumante_atualmente" name="fumante_atualmente">
-              <option value="0">0 - Nao</option>
-              <option value="1">1 - Sim</option>
-            </select>
+            <div class="toggle-group">
+              <input type="radio" id="fumante-n" name="fumante_atualmente" value="0" checked>
+              <label for="fumante-n" class="toggle-btn">Nao</label>
+              <input type="radio" id="fumante-s" name="fumante_atualmente" value="1">
+              <label for="fumante-s" class="toggle-btn">Sim</label>
+            </div>
           </div>
-          <div>
-            <label for="cigarros_por_dia">Cigarros por dia <span class="info" data-tooltip="Valores tipicos no dataset: 0–70.">i</span></label>
-            <input id="cigarros_por_dia" name="cigarros_por_dia" type="number" step="1" min="0" max="70" />
-            <div class="hint">Faixa observada no dataset: 0–70</div>
+          <div class="field" id="cigarros-field">
+            <label for="cigarros_por_dia">Cigarros/dia: <span class="slider-value" id="cigarros_por_dia-value">0</span></label>
+            <input type="range" id="cigarros_por_dia" name="cigarros_por_dia" min="0" max="70" value="0" class="slider" disabled>
+            <div class="slider-labels"><span>0</span><span>70</span></div>
           </div>
-          <div>
-            <label for="medicamento_pressao">Medicamento de pressao</label>
-            <select id="medicamento_pressao" name="medicamento_pressao">
-              <option value="0">0 - Nao</option>
-              <option value="1">1 - Sim</option>
-            </select>
+        </div>
+
+        <!-- Condicoes de Saude -->
+        <div class="section-title">Condicoes de Saude</div>
+        <div class="grid">
+          <div class="field">
+            <label for="medicamento_pressao">Usa medicamento para pressao</label>
+            <div class="toggle-group">
+              <input type="radio" id="med-n" name="medicamento_pressao" value="0" checked>
+              <label for="med-n" class="toggle-btn">Nao</label>
+              <input type="radio" id="med-s" name="medicamento_pressao" value="1">
+              <label for="med-s" class="toggle-btn">Sim</label>
+            </div>
           </div>
-          <div>
+          <div class="field">
             <label for="diabetes">Diabetes</label>
-            <select id="diabetes" name="diabetes">
-              <option value="0">0 - Nao</option>
-              <option value="1">1 - Sim</option>
-            </select>
+            <div class="toggle-group">
+              <input type="radio" id="diab-n" name="diabetes" value="0" checked>
+              <label for="diab-n" class="toggle-btn">Nao</label>
+              <input type="radio" id="diab-s" name="diabetes" value="1">
+              <label for="diab-s" class="toggle-btn">Sim</label>
+            </div>
           </div>
-          <div>
-            <label for="colesterol_total">Colesterol total <span class="info" data-tooltip="Valores tipicos no dataset: 107–696.">i</span></label>
-            <input id="colesterol_total" name="colesterol_total" type="number" step="0.1" min="107" max="696" required />
-            <div class="hint">Faixa observada no dataset: 107–696</div>
+        </div>
+
+        <!-- Medidas Clinicas -->
+        <div class="section-title">Medidas Clinicas</div>
+        <div class="grid">
+          <div class="field">
+            <label for="pressao_sistolica">Pressao Sistolica: <span class="slider-value" id="pressao_sistolica-value">120</span> mmHg</label>
+            <input type="range" id="pressao_sistolica" name="pressao_sistolica" min="80" max="200" value="120" class="slider slider-pressure">
+            <div class="slider-labels"><span>80</span><span>200</span></div>
           </div>
-          <div>
-            <label for="pressao_sistolica">Pressao sistolica <span class="info" data-tooltip="Valores tipicos no dataset: 83.5–295.">i</span></label>
-            <input id="pressao_sistolica" name="pressao_sistolica" type="number" step="0.1" min="83.5" max="295" required />
-            <div class="hint">Faixa observada no dataset: 83.5–295</div>
+          <div class="field">
+            <label for="pressao_diastolica">Pressao Diastolica: <span class="slider-value" id="pressao_diastolica-value">80</span> mmHg</label>
+            <input type="range" id="pressao_diastolica" name="pressao_diastolica" min="50" max="140" value="80" class="slider slider-pressure">
+            <div class="slider-labels"><span>50</span><span>140</span></div>
           </div>
-          <div>
-            <label for="pressao_diastolica">Pressao diastolica <span class="info" data-tooltip="Valores tipicos no dataset: 48–142.5.">i</span></label>
-            <input id="pressao_diastolica" name="pressao_diastolica" type="number" step="0.1" min="48" max="142.5" required />
-            <div class="hint">Faixa observada no dataset: 48–142.5</div>
+          <div class="field">
+            <label for="frequencia_cardiaca">Frequencia Cardiaca: <span class="slider-value" id="frequencia_cardiaca-value">72</span> bpm</label>
+            <input type="range" id="frequencia_cardiaca" name="frequencia_cardiaca" min="40" max="140" value="72" class="slider">
+            <div class="slider-labels"><span>40</span><span>140</span></div>
           </div>
-          <div>
-            <label for="imc">IMC <span class="info" data-tooltip="Valores tipicos no dataset: 15.54–56.8.">i</span></label>
-            <input id="imc" name="imc" type="number" step="0.1" min="15.54" max="56.8" required />
-            <div class="hint">Faixa observada no dataset: 15.54–56.8</div>
+          <div class="field">
+            <label for="imc">IMC: <span class="slider-value" id="imc-value">25.0</span> kg/m2</label>
+            <input type="range" id="imc" name="imc" min="15" max="50" value="25" step="0.1" class="slider slider-imc">
+            <div class="slider-labels"><span>15</span><span>50</span></div>
           </div>
-          <div>
-            <label for="frequencia_cardiaca">Frequencia cardiaca <span class="info" data-tooltip="Valores tipicos no dataset: 44–143.">i</span></label>
-            <input id="frequencia_cardiaca" name="frequencia_cardiaca" type="number" step="0.1" min="44" max="143" required />
-            <div class="hint">Faixa observada no dataset: 44–143</div>
+        </div>
+
+        <!-- Exames Laboratoriais -->
+        <div class="section-title">Exames Laboratoriais</div>
+        <div class="grid">
+          <div class="field">
+            <label for="colesterol_total">Colesterol Total: <span class="slider-value" id="colesterol_total-value">200</span> mg/dL</label>
+            <input type="range" id="colesterol_total" name="colesterol_total" min="100" max="400" value="200" class="slider slider-colesterol">
+            <div class="slider-labels"><span>100</span><span>400</span></div>
           </div>
-          <div>
-            <label for="glicose">Glicose <span class="info" data-tooltip="Valores tipicos no dataset: 40–394.">i</span></label>
-            <input id="glicose" name="glicose" type="number" step="0.1" min="40" max="394" required />
-            <div class="hint">Faixa observada no dataset: 40–394</div>
+          <div class="field">
+            <label for="glicose">Glicose: <span class="slider-value" id="glicose-value">90</span> mg/dL</label>
+            <input type="range" id="glicose" name="glicose" min="40" max="300" value="90" class="slider slider-glicose">
+            <div class="slider-labels"><span>40</span><span>300</span></div>
           </div>
         </div>
 
         <div class="actions">
-          <button type="submit">Calcular risco</button>
-          <button type="button" class="ghost" id="fill-demo">Preencher exemplo</button>
+          <button type="submit" class="btn-primary">
+            <span class="btn-icon">&#9658;</span> Calcular Risco
+          </button>
+          <button type="button" class="btn-secondary" id="fill-demo">Exemplo</button>
+          <button type="button" class="btn-secondary" id="reset-form">Limpar</button>
         </div>
       </form>
-      <p class="note">Esta ferramenta e um apoio a decisao. Nao substitui avaliacao medica.</p>
+      <p class="note">Esta ferramenta e um apoio a decisao clinica. Nao substitui avaliacao medica profissional.</p>
     </section>
 
-    <section class="card result" id="result">
-      <h2>Resultado</h2>
-      <div class="score" id="score">--</div>
-      <div class="muted" id="details">Aguardando calculo...</div>
-      <div class="muted" id="model-info">Modelo: --</div>
-      <div class="muted" id="risk"></div>
+    <section class="card result-card" id="result">
+      <h2>Resultado da Analise</h2>
+
+      <div class="result-container" id="result-container">
+        <div class="result-waiting">
+          <div class="waiting-icon">&#128202;</div>
+          <p>Preencha os dados e clique em "Calcular Risco"</p>
+        </div>
+      </div>
+
+      <div class="result-content" id="result-content" style="display: none;">
+        <!-- Probabilidade Principal -->
+        <div class="probability-section">
+          <div class="probability-label">Probabilidade de Hipertensao</div>
+          <div class="probability-value" id="prob-value">0%</div>
+          <div class="probability-bar-container">
+            <div class="probability-bar" id="prob-bar"></div>
+            <div class="probability-marker" id="prob-marker"></div>
+          </div>
+          <div class="probability-scale">
+            <span>0%</span>
+            <span>25%</span>
+            <span>50%</span>
+            <span>75%</span>
+            <span>100%</span>
+          </div>
+        </div>
+
+        <!-- Categoria de Risco -->
+        <div class="risk-category-section">
+          <div class="risk-badge" id="risk-badge">
+            <span class="risk-icon" id="risk-icon">&#9679;</span>
+            <span class="risk-text" id="risk-text">--</span>
+          </div>
+          <div class="risk-description" id="risk-description"></div>
+        </div>
+
+        <!-- Detalhes Tecnicos -->
+        <div class="technical-details">
+          <div class="detail-item">
+            <span class="detail-label">Modelo:</span>
+            <span class="detail-value" id="model-name">--</span>
+          </div>
+          <div class="detail-item">
+            <span class="detail-label">Threshold:</span>
+            <span class="detail-value" id="threshold-value">--</span>
+          </div>
+          <div class="detail-item">
+            <span class="detail-label">Perfil:</span>
+            <span class="detail-value" id="threshold-profile">--</span>
+          </div>
+          <div class="detail-item">
+            <span class="detail-label">Predicao:</span>
+            <span class="detail-value" id="prediction-value">--</span>
+          </div>
+        </div>
+
+        <!-- Interpretacao -->
+        <div class="interpretation-section" id="interpretation-section">
+          <h3>Interpretacao Clinica</h3>
+          <p id="interpretation-text"></p>
+        </div>
+      </div>
     </section>
   </div>
 
