--- a/07_web/index.html
+++ b/07_web/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Predicão de Risco de Hipertensão</title>
+  <title>Predicão</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -12,10 +12,10 @@
   <div class="wrap">
     <header>
       <div>
-        <h1 class="title">Predicao de Risco de Hipertensao</h1>
+        <h1 class="title">Predicão de Risco de Hipertensão</h1>
         <p class="subtitle">Inferencia clinica com modelo de Machine Learning</p>
       </div>
-      <div class="badge">Random Forest</div>
+      <div class="badge">Modelo: Random Forest</div>
     </header>
 
     <section class="card form-card">
